--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,9 @@ tauri = { version = "2.0.0-alpha", features = [] }
 tauri-plugin-window = "2.0.0-alpha"
 tauri-plugin-shell = "2.0.0-alpha"
 serde_json = "1.0"
+tauri-plugin-updater = "2.0.0-alpha.4"
+tauri-plugin-http = "2.0.0-alpha.5"
+tauri-plugin-process = "2.0.0-alpha.4"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
