--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1.0"
 tauri-plugin-updater = "2.0.0-alpha.4"
 tauri-plugin-http = "2.0.0-alpha.5"
 tauri-plugin-process = "2.0.0-alpha.4"
+tokio = { version = "1.35.0", features = ["full"] }
+reqwest = "0.11.22"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
